test-cases/final-dump/trait_error_abstract_proc_detism.exp
Error detected during type checking of module(s) trait_error_abstract_proc_detism, trait_error_abstract_proc_detism.matcher
final-dump/trait_error_abstract_proc_detism.wybe:7:1: Invalid implementation of trait trait_error_abstract_proc_detism.matcher for type wybe.int: missing required proc matches
